force-app/main/default/objects/Notification_Event__mdt/Notification_Event__mdt.object-meta.xml
<CustomObject>
    <label>Notification Event</label>
    <pluralLabel>Notification Events</pluralLabel>
</CustomObject>