force-app/main/default/objects/Notification_Event__mdt/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Batch Size</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>