force-app/main/default/objects/Notification_Event__mdt/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <length>80</length>
    <type>Text</type>
</CustomField>