force-app/main/default/objects/Notification_Event__mdt/fields/Critical_Level__c.field-meta.xml
<CustomField>
    <fullName>Critical_Level__c</fullName>
    <label>Critical Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>