force-app/main/default/objects/Notification_Event__mdt/fields/RecipientGroups__c.field-meta.xml
<CustomField>
    <fullName>RecipientGroups__c</fullName>
    <label>Recipient Groups</label>
    <type>TextArea</type>
</CustomField>