force-app/main/default/objects/Notification_Event__mdt/fields/TemplateApiName__c.field-meta.xml
<CustomField>
    <fullName>TemplateApiName__c</fullName>
    <label>Template API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>