force-app/main/default/objects/Notification_Event__mdt/fields/ThrottleMinutes__c.field-meta.xml
<CustomField>
    <fullName>ThrottleMinutes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Throttle Minutes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>