force-app/main/default/objects/Notification_Event__mdt/listViews/Dev_View.listView-meta.xml
<ListView>
    <fullName>Dev_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>ThrottleMinutes__c</columns>
    <columns>TemplateApiName__c</columns>
    <columns>RecipientGroups__c</columns>
    <columns>Channel__c</columns>
    <columns>BatchSize__c</columns>
    <columns>Active__c</columns>
    <columns>SaveAsActivity__c</columns>
    <filterScope>Everything</filterScope>
    <label>Dev View</label>
    <language>en_US</language>
</ListView>