force-app/main/default/objects/Notification_Event__mdt/listViews/MyView111.listView-meta.xml
<ListView>
    <fullName>MyView111</fullName>
    <columns>MasterLabel</columns>
    <columns>IsProtected</columns>
    <columns>Active__c</columns>
    <columns>BatchSize__c</columns>
    <columns>Channel__c</columns>
    <columns>RecipientGroups__c</columns>
    <columns>SaveAsActivity__c</columns>
    <columns>TemplateApiName__c</columns>
    <columns>ThrottleMinutes__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>MyView111</label>
    <language>en_US</language>
</ListView>